#13109-added check to see if logs is empty